# FaceSorter

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  FaceSorter.spec  LICENSE  README.md  README_RELEASE.md  app.py  pyproject.toml  requirements.txt  sort_photos_by_person.py
.github/: release.yml
.github/workflows/: macos-build.yml  release.yml  windows-build.yml
src/facesorter/: cli.py  config.py  logging_conf.py
src/facesorter/core/: cluster.py  gallery.py  grouping.py  sorter.py
src/facesorter/gui/: main_window.py
src/facesorter/insight/: service.py
src/facesorter/io/: images.py
src/facesorter/worker/: cluster_worker.py  sorter_worker.py  update_worker.py
tools/: FaceSorter.spec  icon.icns  runtime_hook_dylib_path.py  update_changelog.py
